# app.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const app = express();
-const router = require("./router/concesionario");
+const routerConcesionario = require("./router/concesionario");
+const routerGreidsla = require('./router/greidsla');
 const helmet = require("helmet");
 const swaggerUi = require("swagger-ui-express");
 const swagerConf = require("./swagger.json");
@@ -10,5 +11,6 @@ app.use(helmet());
 require("./database");
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swagerConf));
 
-app.use("/concesionarios", router);
+app.use('/greidsla', routerGreidsla);
+app.use("/concesionarios", routerConcesionario);
 module.exports = app;
